[package]
name = "libfmhal"
version = "0.1.0"
authors = ["sceext <sceext@foxmail.com>"]
edition = "2018"

[features]
default = ["el", "target_stm32f103c8"]
shal = []
el = ["shal"]
target = []
target_stm32f = ["target", "shal"]
target_stm32f1 = ["target_stm32f"]
target_stm32f103c8 = ["target_stm32f1"]
target_stm32f103re = ["target_stm32f1"]
target_stm32f0 = ["target_stm32f"]
target_stm32f030rc = ["target_stm32f0"]

[dependencies]
libfmp = { path = "../libfmp.rs" }
